fix: weird inconsistent loading